--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -1,14 +1,115 @@
 ---
-title: 'Proyecto - Ejepets'
-excerpt: 'Do cupidatat ullamco veniam ad in laborum velit dolor excepteur adipisicing Lorem duis id. Non adipisicing reprehenderit cupidatat culpa qui commodo quis'
-mockup: {
-  src: 'http://placekitten.com/200/300',
-  alt: 'Un gato'
-}
+title: 'Projecto - Ejepets'
+projectName: 'Ejepets'
+excerpt: 'Portal para descubrir y ubicar negocios relacionados con mascotas en Pereira, Colombia'
+mockup: '/src/assets/images/mockups/ejepets/ejepets_1.png'
+mockupAlt: 'Vista previa de Ejepets'
+demoLink: '#'
 ---
 
-# Ejepets en español
 
-Fugiat ea proident adipisicing dolore nisi magna. Ea aliqua nisi proident id quis eiusmod. Do sit ex nostrud eu esse. Mollit in ad excepteur aliqua et nostrud ea consequat laborum voluptate. Ullamco est fugiat duis reprehenderit mollit exercitation laborum minim. Consectetur voluptate irure voluptate ullamco eiusmod quis et. Eu sunt sunt consectetur nisi eu deserunt fugiat consequat.
+import CustomImage from '@components/CustomImage.astro';
+import Description from '@components/projectPage/Description.astro';
+import Typography from '@components/Typography.astro';
+import Button from '@components/Button.astro';
+import Row from '@components/projectPage/Row.astro';
+import List from '@components/projectPage/List.astro';
+import TechCard from '@components/projectPage/TechCard.astro';
+import Gallery from '@components/projectPage/Gallery.astro';
 
-Anim Lorem incididunt ea cillum mollit quis nisi et aliqua commodo aute. Ex magna irure magna nisi. Elit pariatur ipsum do incididunt culpa. Eu anim aliquip anim laboris ea pariatur ut qui velit aliqua.
+export const components = {
+  h1: (props) => <Typography as="h2" {...props} class="lora" />,
+  h2: (props) => <Typography as="h3" {...props} />,
+  h3: (props) => <Typography as="h4" {...props} />,
+  p: (props) => <Typography as="p" {...props} />,
+  ul: List,
+}
+
+export const {
+  title,
+  excerpt,
+  mockup,
+  mockupAlt,
+  demoLink,
+} = frontmatter
+
+export const wasForAClient = false;
+export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
+
+<Description>
+  <CustomImage
+    mobileImgUrl={mockup}
+    desktopImgUrl={mockup}
+    slot="image"
+    class="project__image"
+  />
+  <Fragment slot="content">
+    <div>
+      <Typography as="p" class="semibold" style="font-size: 1.125rem">
+        { wasForAClient ? "Cliente" : "Personal" }
+      </Typography>
+      Éste proyecto fue motivado por el amor hacia nuestras mascotas, con el objetivo de proveer de una forma sencilla para alcanzar aquellos negocios que ofrecen servicios para nuestros mejores amigos, todo en un lugar.
+      <Button
+        as="a"
+        href={demoLink}
+        style="margin-top: 8px; display: block; width: fit-content;"
+      >
+        Demo
+      </Button>
+    </div>
+    <div>
+      <Typography as="p" class="semibold" style="font-size: 1.125rem">
+        {"Tecnologías"}
+      </Typography>
+      <List>
+        {stack.map(tech => (
+          <li>{tech}</li>
+        ))}
+      </List>
+    </div>
+  </Fragment>
+</Description>
+
+<Row paddedRight>
+  # Qué lo hace único
+
+  El objetivo fue proveer una herramienta para mi ciudad que permita a mi gente conocer aquellos emprendimientos que pueden mejorar la vida de sus mejores amigos. Esto nacio de una preocupación personal sobre qué hacer si mi mascota llegase a enfermar y por desconocer los establecimientos cercanos a mi área no poder brindarle una atención inmediata. Así, EjePets busca acercar a todos esos emprendimientos locales que ofrezcan los servicios que necesiten, todo al alcance de la mano.
+</Row>
+
+<Row evenColumns inverted>
+  <div>
+    # Por qué estas tecnologías
+
+    Next.js dada su robustes y capacidad de optimizar aplicaciones web permitió manejar de la mejor manera el enrutamiento del sitio para generar una ruta protegida para el panel de administrador. Además, gracias al uso de los *hooks* de React fue posible manejar de forma óptima la interacción con el mapa, aplicando filtros en tiempo real para encontrar los establecimientos que ofrecen exactamente lo que se necesita.
+  </div>
+  <div>
+    {
+      stack.map(tech => (
+        <TechCard tech={tech} />
+      ))
+    }
+  </div>
+</Row>
+
+<Row centered>
+  # Razones por las que valió el esfuerzo
+
+  Dadas las características del proyecto, logré practicar un mejor manejo de APIs externas, el uso de base de datos no relacional como lo es Firestore, el manejo de formularios para añadir nuevos establecimientos, conectando los datos con Firebase.
+
+  Si bien esto representa un avance técnico, mi parte favorita fue contactar con los establecimientos para darles a conocer el proyecto y solicitar su permiso para añadirlos al mapa, pues lograr transmitir el objetivo del sitio, recibir de primera mano imágenes hermosas de dichos establecimientos y poner en práctica mi comunicación con otros fue enriquecedor.
+</Row>
+
+<Row> 
+  # Galería
+
+  <Gallery>
+    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+
+    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+
+    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+  </Gallery>
+</Row>
+
+
+
