[Finish] Ejepets project page

--- a/src/content/projects/en/ejepets.mdx
+++ b/src/content/projects/en/ejepets.mdx
@@ -2,7 +2,7 @@
 title: 'Project - Ejepets'
 projectName: 'Ejepets'
 excerpt: 'A portal to discover and locate pet-related businesses in Pereira, Colombia.'
-mockup: './ejepets.png'
+mockup: '@assets/images/mockups/ejepets/ejepets.png'
 mockupAlt: 'Ejepets preview image'
 demoLink: '#'
 ---
@@ -66,18 +66,14 @@ export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 <Row paddedRight>
   # What makes this unique
 
-  Fugiat ea proident adipisicing dolore nisi magna. Ea aliqua nisi proident id quis eiusmod. Do sit ex nostrud eu esse. Mollit in ad excepteur aliqua et nostrud ea consequat laborum voluptate. Ullamco est fugiat duis reprehenderit mollit exercitation laborum minim. Consectetur voluptate irure voluptate ullamco eiusmod quis et. Eu sunt sunt consectetur nisi eu deserunt fugiat consequat.
-
-  Anim Lorem incididunt ea cillum mollit quis nisi et aliqua commodo aute. Ex magna irure magna nisi. Elit pariatur ipsum do incididunt culpa. Eu anim aliquip anim laboris ea pariatur ut qui velit aliqua.
+  The objective was to create a tool for my city that enables people to discover businesses dedicated to enhancing the well being of their best friends. The seed of this idea sprouted when I envisioned the concern of my pet falling ill, and the potential to find a nearby establishment for immediate attention. Therefore, EjePets aims to gather all local businesses offering essential pet services within easy reach, ensuring convenience for pet owners.
 </Row>
 
 <Row evenColumns inverted>
   <div>
     # Why these technologies
 
-    Fugiat ea proident adipisicing dolore nisi magna. Ea aliqua nisi proident id quis eiusmod. Do sit ex nostrud eu esse. Mollit in ad excepteur aliqua et nostrud ea consequat laborum voluptate. Ullamco est fugiat duis reprehenderit mollit exercitation laborum minim. Consectetur voluptate irure voluptate ullamco eiusmod quis et. Eu sunt sunt consectetur nisi eu deserunt fugiat consequat.
-
-    Anim Lorem incididunt ea cillum mollit quis nisi et aliqua commodo aute. Ex magna irure magna nisi. Elit pariatur ipsum do incididunt culpa. Eu anim aliquip anim laboris ea pariatur ut qui velit aliqua.
+    Given its robustness and ability to optimize web applications, Next.js allowed for the optimal management of site routing, creating a protected route for the admin panel, and providing optimized resources based on the user's device. Furthermore, thanks to the use of React's hooks, it was possible to handle map interactions efficiently, applying real-time filters to locate establishments that offer precisely what is needed.
   </div>
   <div>
     {
@@ -91,19 +87,21 @@ export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 <Row centered>
   # Things that made it worth it
 
-  Fugiat ea proident adipisicing dolore nisi magna. Ea aliqua nisi proident id quis eiusmod. Do sit ex nostrud eu esse. Mollit in ad excepteur aliqua et nostrud ea consequat laborum voluptate. Ullamco est fugiat duis reprehenderit mollit exercitation laborum minim. Consectetur voluptate irure voluptate ullamco eiusmod quis et. Eu sunt sunt consectetur nisi eu deserunt fugiat consequat.
+  Given the project's characteristics, I managed to practice better handling of external APIs, the use of non-relational databases like Firestore, and form management to add new establishments, connecting the data with Firebase.
 
-  Anim Lorem incididunt ea cillum mollit quis nisi et aliqua commodo aute. Ex magna irure magna nisi. Elit pariatur ipsum do incididunt culpa. Eu anim aliquip anim laboris ea pariatur ut qui velit aliqua.
+  While this represents a technical advancement, my favorite part is reaching out to the establishments to introduce them to the project and request permission to add them to the map. Successfully conveying the site's purpose, receiving beautiful images firsthand from these establishments, and putting my communication skills into practice with others were enriching experiences.
 </Row>
 
 <Row> 
   # Gallery
 
   <Gallery>
-    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+    ![EjePets site gallery image 1](@assets/images/mockups/ejepets/ejepets_2.png)
 
-    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+    ![EjePets site gallery image 2](@assets/images/mockups/ejepets/ejepets_3.png)
 
-    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+    ![EjePets site gallery image 3](@assets/images/mockups/ejepets/ejepets_4.png)
+
+    ![EjePets site gallery image 4](@assets/images/mockups/ejepets/ejepets_5.png)
   </Gallery>
 </Row>
