--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -2,7 +2,7 @@
 title: 'Projecto - Ejepets'
 projectName: 'Ejepets'
 excerpt: 'Portal para descubrir y ubicar negocios relacionados con mascotas en Pereira, Colombia'
-mockup: './ejepets.png'
+mockup: '@assets/images/mockups/ejepets/ejepets.png'
 mockupAlt: 'Vista previa de Ejepets'
 demoLink: '#'
 ---
@@ -35,7 +35,7 @@ export const wasForAClient = false;
 export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 
 <Description>
-  ![](./ejepets.png)
+  ![](../ejepets.png)
   <Fragment slot="content">
     <div>
       <Typography as="p" class="semibold" style="font-size: 1.125rem">
@@ -66,14 +66,14 @@ export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 <Row paddedRight>
   # Qué lo hace único
 
-  El objetivo fue proveer una herramienta para mi ciudad que permita a mi gente conocer aquellos emprendimientos que pueden mejorar la vida de sus mejores amigos. Esto nacio de una preocupación personal sobre qué hacer si mi mascota llegase a enfermar y por desconocer los establecimientos cercanos a mi área no poder brindarle una atención inmediata. Así, EjePets busca acercar a todos esos emprendimientos locales que ofrezcan los servicios que necesiten, todo al alcance de la mano.
+  El objetivo fue proveer una herramienta para mi ciudad que permita a mi gente conocer aquellos emprendimientos que pueden mejorar la vida de sus mejores amigos. Esto nacio de una preocupación personal sobre qué hacer si mi mascota llegase a enfermar y por desconocer los establecimientos cercanos a mi área no poder brindarle una atención inmediata. Así, EjePets busca acercar a todos esos emprendimientos locales que ofrezcan los servicios que necesiten, todo al alcance de sus manos.
 </Row>
 
 <Row evenColumns inverted>
   <div>
     # Por qué estas tecnologías
 
-    Next.js dada su robustes y capacidad de optimizar aplicaciones web permitió manejar de la mejor manera el enrutamiento del sitio para generar una ruta protegida para el panel de administrador. Además, gracias al uso de los *hooks* de React fue posible manejar de forma óptima la interacción con el mapa, aplicando filtros en tiempo real para encontrar los establecimientos que ofrecen exactamente lo que se necesita.
+    Dada su robustez y capacidad para optimizar aplicaciones web, Next.js permitió gestionar de la mejor manera el enrutamiento del sitio, creando una ruta protegida para el panel de administrador y proporcionando recursos optimizados según el dispositivo del usuario. Además, gracias al uso de los *hooks* de React, fue posible manejar de manera óptima la interacción con el mapa, aplicando filtros en tiempo real para encontrar los establecimientos que ofrecen exactamente lo que se necesita.
   </div>
   <div>
     {
@@ -87,22 +87,21 @@ export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 <Row centered>
   # Razones por las que valió el esfuerzo
 
-  Dadas las características del proyecto, logré practicar un mejor manejo de APIs externas, el uso de base de datos no relacional como lo es Firestore, el manejo de formularios para añadir nuevos establecimientos, conectando los datos con Firebase.
+  Dadas las características del proyecto, logré practicar un mejor manejo de APIs externas, el uso de bases de datos no relacionales como Firestore, el manejo de formularios para añadir nuevos establecimientos y conectar los datos con Firebase.
 
-  Si bien esto representa un avance técnico, mi parte favorita fue contactar con los establecimientos para darles a conocer el proyecto y solicitar su permiso para añadirlos al mapa, pues lograr transmitir el objetivo del sitio, recibir de primera mano imágenes hermosas de dichos establecimientos y poner en práctica mi comunicación con otros fue enriquecedor.
+  Si bien esto representa un avance técnico, mi parte favorita es contactar con los establecimientos para darles a conocer el proyecto y solicitar su permiso para añadirlos al mapa. Lograr transmitir el objetivo del sitio, recibir de primera mano imágenes hermosas de dichos establecimientos y poner en práctica mi comunicación con otros fue enriquecedor.
 </Row>
 
 <Row> 
   # Galería
 
   <Gallery>
-    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+    ![Imagen 1 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_2.png)
 
-    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+    ![Imagen 2 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_3.png)
 
-    ![](../../../assets/images/mockups/ejepets/ejepets_2.png)
+    ![Imagen 3 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_4.png)
+
+    ![Imagen 4 de la galería del sitio EjePets](@assets/images/mockups/ejepets/ejepets_5.png)
   </Gallery>
 </Row>
-
-
-
