[Finish] Ejepets project page

--- a/src/content/projects/es/ejepets.mdx
+++ b/src/content/projects/es/ejepets.mdx
@@ -35,7 +35,7 @@ export const wasForAClient = false;
 export const stack = ["Next.js", "React", "Tailwind CSS", "Firebase", "Leaflet"]
 
 <Description>
-  ![](../ejepets.png)
+  ![](@assets/images/mockups/ejepets/ejepets.png)
   <Fragment slot="content">
     <div>
       <Typography as="p" class="semibold" style="font-size: 1.125rem">
